--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Calculadora de Acidez</title>
-</head>
+  </head>
 
-<body>
-    <h1>Este H1</h1>
-    <h2>Este H2</h2>
-    <h3>Este H3</h3>
-    <p>Este é um texto de paragrafo</p>
-    
-</body>
+  <body>
+    <h1 class="title-page">Calculadora de Acidez</h1>
+
+    <p>
+      Calcule a acidez titulável de ácidos para controle de qualidade de
+      agroindústrias e afins.
+    </p>
+
+    <p>
+      <b>Concentração do titulante = ct (numero positivo) mol/L</b>
+    </p>
+    <input type="number" id="ct" />
+
+    <p>
+      <b>Volume do titulante = vt (numero positivo) mL</b>
+    </p>
+    <input type="number" id="vt" />
+
+    <p>
+      <b>Massa molar do ácido = mm (numero positivo) g/mol </b>
+    </p>
+    <input type="number" id="mm" />
+
+    <p>
+      <b>Acidez titulável = at (numero positivo) %(m/v) </b>
+    </p>
+
+    <p>
+      <b>at = (ct * vt * mm)/100</b>
+    </p>
+
+    <button id="calc-result">Calcular Resultado</button>
+
+    <h2 class="result">Resultado: <b id="result" class="result">0</b> %(m/v)</h2>
+
+    <script src="script.js"></script>
+  </body>
 </html>
